--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,9 @@
         "ecmaVersion": 2020
     },
     "rules": {
-        "no-console": "off"
+        "no-console": "off",
+        "no-underscore-dangle":"warn",
+        "no-unused-vars": "warn",
+        "no-unexpected-multiline": "error"
     }
 }
