--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@hapi/hapi": "^21.3.2",
     "dotenv": "^17.2.0",
     "joi": "^17.13.3",
-    "nanoid": "^3.1.20"
+    "nanoid": "^3.1.20",
+    "pg": "^8.16.3"
   }
 }
